--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,16 +4,17 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => ('hilite' if @sort == 'title')}= link_to 'Movie Title', movies_path(:sort => 'title'),:id => 'title_header'
       %th Rating
-      %th Release Date
+      %th{:class => ('hilite' if @sort =='release_date')}= link_to 'Release Date', movies_path(:sort => 'release_date'),:id => 'release_date_header'
+
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
-        %td= link_to "#{movie.title}" ,movies_path
+        %td= movie.title
         %td= movie.rating
-        %td= link_to "#{movie.release_date}", movies_path
+        %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
