--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
   Include:
   -@all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, true, :id => "ratings_#{rating}"
+    = check_box_tag "ratings[#{rating}]", 1,(@checked_boxes.nil? == true ? true :(@checked_boxes.include?(rating) == true ? true :false)) , :id => "ratings_#{rating}"
   =submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#movies
