--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,15 +4,15 @@
   Include:
   -@all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1,(@checked_boxes.nil? == true ? true :(@checked_boxes.include?(rating) == true ? true :false)) , :id => "ratings_#{rating}"
+    = check_box_tag "ratings[#{rating}]", 1,(session[:ratings].nil? == true ? true :(session[:ratings].include?(rating) == true ? true :false)) , :id => "ratings_#{rating}"
   =submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#movies
   %thead
     %tr
-      %th{:class => ('hilite' if @sort == 'title')}= link_to 'Movie Title', movies_path(:sort => 'title'),:id => 'title_header'
+      %th{:class => ('hilite' if session[:sort] == 'title')}= link_to 'Movie Title', movies_path(:sort => 'title'),:id => 'title_header'
       %th Rating
-      %th{:class => ('hilite' if @sort =='release_date')}= link_to 'Release Date', movies_path(:sort => 'release_date'),:id => 'release_date_header'
+      %th{:class => ('hilite' if session[:sort] =='release_date')}= link_to 'Release Date', movies_path(:sort => 'release_date'),:id => 'release_date_header'
 
       %th More Info
   %tbody
